@@ -11,13 +11,13 @@ Version 2.19
 
   156, 431, 832, 2801, 7003, 9954, 10278, 11087, 13028, 13982, 13985,
   14029, 14155, 14547, 14699, 14752, 14876, 14910, 15048, 15218, 15277,
-  15308, 15362, 15400, 15427, 15522, 15531, 15532, 15608, 15609, 15610,
-  15632, 15640, 15670, 15672, 15680, 15681, 15723, 15734, 15735, 15736,
-  15748, 15749, 15754, 15760, 15763, 15764, 15797, 15799, 15825, 15844,
-  15847, 15849, 15855, 15856, 15857, 15859, 15867, 15886, 15887, 15890,
-  15892, 15893, 15895, 15897, 15905, 15909, 15917, 15919, 15921, 15923,
-  15939, 15948, 15963, 15966, 15985, 15988, 16032, 16034, 16036, 16037,
-  16041, 16071, 16072, 16074, 16078, 16112.
+  15308, 15362, 15374, 15400, 15427, 15522, 15531, 15532, 15608, 15609,
+  15610, 15632, 15640, 15670, 15672, 15680, 15681, 15723, 15734, 15735,
+  15736, 15748, 15749, 15754, 15760, 15763, 15764, 15797, 15799, 15825,
+  15844, 15847, 15849, 15855, 15856, 15857, 15859, 15867, 15886, 15887,
+  15890, 15892, 15893, 15895, 15897, 15905, 15909, 15917, 15919, 15921,
+  15923, 15939, 15948, 15963, 15966, 15985, 15988, 16032, 16034, 16036,
+  16037, 16041, 16071, 16072, 16074, 16078, 16112.
 
 * CVE-2012-4412 The strcoll implementation caches indices and rules for
   large collation sequences to optimize multiple passes.  This cache
